# your-crypto-story

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  canister_ids.json  components.json  dfx.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: docker-test.yml
scripts/: build-backend.sh  deploy-local.sh  install-pocket-ic.sh
src/backend/: Cargo.toml
src/backend/src/: error.rs  lib.rs  main.rs  model.rs  storage.rs
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/distributed/backend/: backend.did  backend.wasm
src/frontend/src/: app.html
src/frontend/src/env/: tokens.icrc.json
src/frontend/src/lib/: api.ts  canisterIds.ts  icrc-index.ts  icrc.ts
src/frontend/src/lib/actors/: agents.ic.ts
src/frontend/src/lib/api/: backend.api.ts  icrc.index.api.ts
src/frontend/src/lib/canisters/: backend.canister.ts  icrc.index.canister.ts
src/frontend/src/lib/components/: Alerter.svelte  Auth.svelte  Avatar.svelte  ButtonWithSpinner.svelte  DarkModeButton.svelte  KnownPrincipalForm.svelte  NameEmailForm.svelte  NavBar.svelte  OwnedPrincipalForm.svelte  TableRowSkelton.svelte  TxTypeBadge.svelte  UserMenu.svelte
src/frontend/src/lib/i18n/: en.json
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/my-pocket-ic-tests/: Cargo.toml  pocket_identity.pem
src/my-pocket-ic-tests/src/: backend_test.rs  backend_test_api.rs  lib.rs  test_env.rs
tests/: CardPage.ts  card.spec.ts
(+32 files in other folders)
